# curva

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
debug/: debug.py  main  main.cpp  phi.npy  psi.npy  x.npy  y.npy
include/: atom.h  atoms.h  calculation.h  chemical_properties.h  coordinates.h  curva.h  element_properties.h  node.h  nodes.h  serializer.h  utils.h
include/cuda/: cudautils.h  cutoff_matrix.h  mutual_information.h  pearson_correlation.h
include/custom_iterators/: forward_iterator.h  map_value_forward_iterator.h  random_access_iterator.h
include/dcd/: vmdplugin.h
include/json/docs/mkdocs/docs/api/json_pointer/: parent_pointer.md
include/matrix/: curva_matrix.h  curva_vector.h
lib/: pycurva.py  pycurvaPYTHON_wrap.cxx  tclcurvaTCL_wrap.cxx
scripts/: mi.npy  test.py  test.tcl
src/: atom.cpp  atoms.cpp  calculation.cpp  coordinates.cpp  curva.cpp  node.cpp  nodes.cpp  serializer.cpp  utils.cpp
src/cnpy/: cnpy.cpp
src/cuda/: cudautils.cpp  cutoff_matrix.cu  mutual_information.cu  pearson_correlation.cu
src/dcd/: dcd.cpp
src/matrix/: curva_matrix.cu  curva_vector.cpp
swig/python/: pycurva.i  pycurva_documentation.i  pycurva_features.i  pycurva_headers1.i  pycurva_headers2.i  pycurva_ignore.i  pycurva_typemaps.i  swigerators.i
swig/tcl/: tclcurva.i  tclcurva_headers1.i  tclcurva_headers2.i  tclcurva_ignore.i  tclcurva_rename.i  tclcurva_typemaps.i
tests/: cpu_gpu_generalized_correlation_single_window_test.py  gpu_generalized_correlation_single_window_test  x.npy  y.npy
wrappers/pycurva/: setup.py
wrappers/pycurva/pycurva/: __init__.py
